--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,13 +1,14 @@
 .jumbotron {
     box-shadow: 5px 5px 7px 0px rgba(71, 71, 71, 0.83);
-    background-image: url("https://www.telegraph.co.uk/content/dam/books/2020/10/27/TELEMMGLPICT000242555704_trans_NvBQzQNjv4Bq900leoZVuq6ru6F43OqP_jlaTMTxUhlzF8Rkw038U-A.jpeg?imwidth=1280");
+    background-image: url("https://ggsc.s3.amazonaws.com/images/uploads/Movies_to_watch_during_pandemic.jpg");
     background-size: cover;
-    height: 500px;
+    height: 700px;
+    width: 200x;
     background-position: center;
 }
 
 .myText {
-    color: rgb(0, 183, 255);
+    color: rgb(235, 122, 16);
     -webkit-text-stroke: 2px rgb(0, 0, 0);
     font-weight: bold;
     font-size: 56px;
